# the-ai-game

./: .gitignore  CLAUDE.md  KLING-2.6_USER_GUIDE.md  README.md  config.yaml  flatten_codebase.py  generate_30_videos.py  generate_videos_local.py  pyproject.toml  secrets.env  verify_backend.py  verify_full_game.py
.claude/agents/: researcher.md
backend/: app.py  prompts.py
backend/tests/: __init__.py  test_fixes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CoopVotingView.jsx  DebugMenu.jsx  InputView.jsx  Lobby.jsx  QuickfireView.jsx  ResultsView.jsx  RevivalVotingView.jsx  SacrificeSubmissionView.jsx  SacrificeVolunteerView.jsx  SacrificeVotingView.jsx  ScenarioView.jsx  TrapView.jsx  VotingView.jsx
