[project]
name = "death-by-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fal-client>=0.10.0",
    "fastapi>=0.124.4",
    "modal>=1.2.6",
    "openai>=2.13.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "shortuuid>=1.0.13",
]
